--- a/css/site.css
+++ b/css/site.css
@@ -23,10 +23,14 @@
 }
 
 .headline{
-    font-size:2em;
+    font-size:.9em;
     color:#999
 }
 
 .container {
     width: 90%;
+}
+
+h4 {
+    font-size: .9em;
 }
