--- a/css/site.css
+++ b/css/site.css
@@ -27,10 +27,15 @@
     color:#999
 }
 
+.right {
+    float: right;
+}
+
 .container {
     width: 90%;
 }
 
 h4 {
-    font-size: .9em;
+    font-size: 1em;
+    margin-bottom: -.2em;
 }
